@@ -1,13 +1,16 @@
-using PaperMarioItems.Content.Items;
+using PaperMarioItems.Content;
 using Terraria;
 using Terraria.Localization;
-using Terraria.ModLoader;
 
-namespace PaperMarioItems.Content
+namespace PaperMarioItems.Common
 {
 	public static class PaperMarioConditions
 	{
         public static Condition HasCookbook = new Condition(Language.GetTextValue($"Mods.PaperMarioItems.Items.Cookbook.DisplayName"), ()
-            => Main.LocalPlayer.HasItem(ModContent.ItemType<Cookbook>()));
+            => Main.LocalPlayer.HasItem(PMItemID.Cookbook)),
+        ExpertAndHardmode = new Condition(Language.GetOrRegister($"Mods.PaperMarioItems.Conditions.ExpertAndHardmode"), ()
+            => Main.hardMode && Main.expertMode),
+        ClassicAndHardmode = new Condition(Language.GetOrRegister($"Mods.PaperMarioItems.Conditions.NormalAndHardmode"), ()
+            => Main.hardMode && !Main.expertMode);
     }
 }
