@@ -18,7 +18,7 @@ namespace PaperMarioItems.Content.Items.ConsumablesSPM
         public override void SetDefaults()
         {
             Item.DefaultToFood(33, 36, BuffID.WellFed, 600);
-            Item.rare = ItemRarityID.Pink;
+            Item.rare = ItemRarityID.White;
             Item.value = Item.sellPrice(silver: 20);
             Item.healLife = 100;
             Item.potion = true;
